# Governed-Data-Analyst-Agent-for-slack

./: .env.example  .gitignore  README.md  RUN_LOCALLY.md  SETUP_GUIDE.md  pyproject.toml  start_services.ps1  test_output.txt
.github/workflows/: ci.yml
apps/admin-ui/: main.py  requirements.txt
apps/admin-ui/templates/: approvals.html  audit.html  dashboard.html  policies.html  replay.html
data/: metrics.yaml
data/docs/: business_glossary.md  data_dictionary.md  metric_definitions.md
docs/: architecture.md  threat-model.md
eval/: questions.jsonl  runner.py
infra/: docker-compose.yml
infra/postgres/: init.sql  seed.sql
policies/rego/: approval.rego  columns.rego  main.rego  rbac.rego  rows.rego  tables.rego
policies/rego/tests/: rbac_test.rego  tables_test.rego
scripts/: backfill_embeddings.py
services/agent/: Dockerfile  main.py  requirements.txt
services/mcp-server/: Dockerfile  requirements.txt  server.py
services/mcp_server/: analysis.py  embeddings.py  models.py  server.py
services/slack-app/: main.py  requirements.txt
services/slack_app/: Dockerfile  requirements.txt
tests/unit/agent/: test_agent.py
tests/unit/mcp_server/: test_server.py  test_vector_search.py
